# -conduital

./: .gitattributes  .gitignore  AGENTS.md  API_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  DATABASE_MODELS_SUMMARY.md  FILE_CREATION_SCRIPT.md  FORMS_IMPLEMENTATION_SUMMARY.md  FRONTEND_BUILD_COMPLETE.md  GOOGLE_DRIVE_SETUP.md  LICENSE  NEXT_STEPS.md  PHASE4_ARCHITECTURE.md  PHASE_1_DISCOVERY_COMPLETE.md  PHASE_2_AUTO_DISCOVERY_COMPLETE.md  PRIVACY_POLICY.md  PROJECT_STATUS.md  Project_Tracker_Technical_Spec.md  QUICKSTART.md  QUICK_FIX.md  QUICK_START.md  R1_RELEASE_NOTES.md  README.md  SECOND_BRAIN_SYNC_EXAMPLE.md  SETUP.md  SETUP_GUIDE.md  SYNC_ENGINE_SUMMARY.md  TESTER_SETUP_GUIDE.md  THIRD_PARTY_LICENSES.txt  TROUBLESHOOTING.md  backlog-archive-2026-02-12.md  backlog.md  build.bat  create-test-data-simple.ps1  create-test-data.ps1  distribution-checklist.md  findings.md  inspect_db.py  (+12 more)
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  DISCOVERY_GUIDE.md  INTELLIGENCE_LAYER_DOCUMENTATION.md  MODULE_SYSTEM.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  README.md  SYNC_ENGINE_DOCUMENTATION.md  alembic.ini  conduital.spec  diagnose.py  init_db.py  pyproject.toml  requirements.txt  run.py  version_info.txt
backend/alembic/: env.py
backend/alembic/versions/: 006_add_memory_layer_tables.py  20260121_2013-cb7b35ad5824_initial_database_schema.py  20260122_0113-05cc64c204e2_initial_database_schema.py  20260129_add_outcome_statement_to_projects.py  20260130_add_user_authentication.py  20260201_add_last_reviewed_at_to_areas.py  20260201_add_project_review_dates.py  20260201_add_urgency_zone_to_tasks.py  20260206_add_area_health_and_archive.py  20260206_add_inbox_timestamps.py  20260206_add_natural_planning_model_fields.py  20260207_repair_user_id_columns.py  20260209_add_momentum_snapshots.py  20260209_weekly_review_completion.py  20260211_add_review_frequency_to_projects.py  20260212_add_ai_summary_to_weekly_review.py  20260212_add_soft_delete_columns.py  20260415_add_license_table.py  20260425_add_feedback_table.py  20260504_add_resolved_to_feedback.py
backend/app/: __init__.py  main.py  tray.py
backend/app/api/: areas.py  auth.py  contexts.py  discovery.py  export.py  feedback.py  goals.py  inbox.py  intelligence.py  license.py  next_actions.py  projects.py  settings.py  setup.py  sync.py  tasks.py  telemetry.py  templates.py  visions.py  webhooks.py
backend/app/core/: config.py  database.py  db_utils.py  logging_config.py  paths.py  shutdown.py
backend/app/migrations/: __init__.py  chain.py  cli.py  integrity.py  validators.py
backend/app/models/: __init__.py  activity_log.py  area.py  (+15 more)
backend/scripts/: README.md  create_project_files.py  discover_projects.py  init_db.py  seed_sample_data.py  sync_version.py
backend/tests/: conftest.py  test_api_basic.py  test_discovery_broadcast.py  test_entity_markdown.py  test_export.py  test_feedback_api.py  test_import.py  test_inbox_endpoints.py  test_intelligence_service.py  test_license_api.py  test_next_actions_service.py  test_obsidian_compatibility.py  test_project_service.py  test_session_summary.py  test_settings_api.py  test_settings_storage.py  test_storage_edge_cases.py  test_storage_integration.py  test_storage_provider.py  test_storage_service.py  test_sync_broadcast.py  test_task_service.py  test_templates_api.py
(+206 files in other folders)
