[tool.poetry]
name = "project-tracker"
version = "0.1.0"
description = "GTD + Manage Your Now project management system with Second Brain integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-frontmatter = "^1.1.0"
watchdog = "^4.0.0"
anthropic = "^0.18.0"
python-socketio = "^5.11.0"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
markdown-it-py = "^3.0.0"
pyyaml = "^6.0.1"
# Authentication dependencies
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
# Background task scheduling
apscheduler = "^3.10.4"
# Migration integrity CLI
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
