[tool.poetry]
name = "conduital"
version = "1.0.0-beta"
description = "Intelligent momentum system for independent operators with markdown file sync"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-frontmatter = "^1.1.0"
watchdog = "^6.0.0"
anthropic = "^0.42.0"
python-socketio = "^5.12.0"
aiofiles = "^24.1.0"
httpx = "^0.28.0"
python-multipart = "^0.0.18"
markdown-it-py = "^3.0.0"
pyyaml = "^6.0.2"
# Authentication dependencies
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
# Background task scheduling
apscheduler = "^3.10.4"
# Migration integrity CLI
typer = "^0.15.0"
rich = "^13.9.0"
# System tray (packaged mode)
pystray = "^0.19.5"
Pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
httpx = "^0.28.0"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
